preventing empty console lines from collapsing

--- a/src/challenge/Console.css
+++ b/src/challenge/Console.css
@@ -11,6 +11,7 @@
   margin: 1px;
   color: white;
   width: calc(100% - 20px);
+  height: 1em;
   white-space: pre-wrap;       
   white-space: -moz-pre-wrap;  
   white-space: -pre-wrap;      
